* implemented administrator account input, validation and creation in installer (first-, lastname, email, companyname)

--- a/install/assets/css/installer.css
+++ b/install/assets/css/installer.css
@@ -154,6 +154,10 @@ input#database_new {
 	width:250px;
 }
 
+input#email.adminaccount {
+	width:99%;
+}
+
 
 
 /* ---------------------------------
