--- a/install/view/08_importdemodata.tmpl
+++ b/install/view/08_importdemodata.tmpl
@@ -4,10 +4,10 @@
 	<div class="field">
 
 		<input type="checkbox" name="import" id="input" value="1" checked="checked">
-		<label for="import">{Label installer.demodata.checkboxlabel}</label>
+		<label for="import">{Label installer.importdemodata.checkboxlabel}</label>
 	</div>
-	<br>
-	<p>{Label installer.demodata.contains}</p>
+	<br />
+	<p>{Label installer.importdemodata.contains}</p>
 
 	<input type="hidden" name="importdemodata" value="1" />
 {/block}
