--- a/install/view/08_importdemodata.tmpl
+++ b/install/view/08_importdemodata.tmpl
@@ -3,8 +3,8 @@
 {block name="box"}
 	<div class="field">
 
-		<input type="checkbox" name="import" id="input" value="1" checked="checked">
-		<label for="import">{Label installer.importdemodata.checkboxlabel}</label>
+		<input style="width:4%" type="checkbox" name="import" id="input" value="1" checked="checked">
+		<label for="input">{Label installer.importdemodata.checkboxlabel}</label>
 	</div>
 	<br />
 	<p>{Label installer.importdemodata.contains}</p>
