* Task 1361.162 * removed assets toggle button * expand space to left for upload form label

--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -185,6 +185,11 @@ div.fElement {
 	.typeTextinput {}
 
 	.typeDateinput {}
+	
+	
+	.typeUpload {
+		padding-left: 5px !important;
+	}
 
 		div.typeDateinput .fField input {
 			float:left;
