--- a/core/assets/css/navi.css
+++ b/core/assets/css/navi.css
@@ -56,6 +56,10 @@ ul#navi-main-list li:hover {
 	background-color:#d3dabb; /* bcl03 */
 }
 
+#todoyu-loginpage ul#navi-main-list li:hover {
+	background-color:#e3eace;
+}
+
 
 
 /* -------------------
