--- a/install/view/configs/system.php.tmpl
+++ b/install/view/configs/system.php.tmpl
@@ -23,8 +23,7 @@ Todoyu::$CONFIG['SYSTEM']['name'] 		= '{$name}';
 Todoyu::$CONFIG['SYSTEM']['email']		= '{$email}';
 Todoyu::$CONFIG['SYSTEM']['language']	= '{$language}';
 Todoyu::$CONFIG['SYSTEM']['locale']		= '{$locale}';
-
-//Todoyu::$CONFIG['LOCALE']['defaultTimezone']= 'Europe/Zurich';
+Todoyu::$CONFIG['SYSTEM']['timezone']	= '{$timezone}';
 
 Todoyu::$CONFIG['SYSTEM']['encryptionKey']	= '{$encryptionKey}';
 
