* Core Controllers * Fixed problems with switching from language to locales

--- a/core/assets/css/headlet.css
+++ b/core/assets/css/headlet.css
@@ -33,7 +33,7 @@
 	z-index:200;
 }
 
-	#headlets li.active a,
+	#headlets li a.active,
 	#headlets li:hover a {
 		border-color:#b9bbad;
 		background-color: white;
