--- a/core/view/panelwidget.tmpl
+++ b/core/view/panelwidget.tmpl
@@ -1,7 +1,7 @@
 <div class="panelWidget {$class}" id="panelwidget-{$id}">
 	<h1 id="panelwidget-{$id}-h1" {if $collapsed}class="expand"{/if}>
 		<span class="title" id="panelwidget-{$id}-title">{$title}</span>
-		<span class="toggle {if $collapsed}expand{/if}" id="panelwidget-{$id}-toggle" onclick="Todoyu.PanelWidget.toggle('{$ext}', '{$id}')"></span>
+		<span class="toggle {if $collapsed}expand{/if}" id="panelwidget-{$id}-toggle" onclick="Todoyu.PanelWidget.toggle('{$id}')"></span>
 	</h1>
 	<div class="content" id="panelwidget-{$id}-content" {if $collapsed}style="display:none"{/if}>
 		<div class="panelwidgetContent">{$content}</div>
