* changed label core.role.attr.active to core.attr.is_active (en_GB, de_DE, pt_BR)

--- a/core/config/form/role.xml
+++ b/core/config/form/role.xml
@@ -22,7 +22,7 @@
 				</field>
 
 				<field type="checkbox" name="is_active">
-					<label>core.role.attr.active</label>
+					<label>core.attr.is_active</label>
 				</field>
 
 				<field type="databaseRelation" name="persons">
