--- a/core/config/form/role.xml
+++ b/core/config/form/role.xml
@@ -35,7 +35,7 @@
 						</url>
 						<label type="function">
 							<function>TodoyuContactViewHelper::getPersonLabel</function>
-							<noLabel>Neuer Benutzer</noLabel>
+							<noLabel>contact.person.new</noLabel>
 						</label>
 					</record>
 				</field>
