--- a/core/view/form/Form.tmpl
+++ b/core/view/form/Form.tmpl
@@ -1,5 +1,5 @@
 {if ! $noFormTag }
-	<form name="{$name}" id="{$htmlId}" class="fForm form{ucfirst($name)} {$class}" method="{$method|default:'post'}" action="{$action}" onsubmit="{$onsubmit|default:'return false'}" {if $enctype}enctype="{$enctype}"{/if} {$extraAttributes}>
+	<form name="{$name}" id="{$htmlId}" class="fForm form{ucfirst($name)} {$class}" method="{$method|default:'post'}" action="{$action}" onsubmit="{$onsubmit|default:'return false'}" {if $enctype}enctype="{$enctype}"{/if} {if $target}target="{$target}"{/if} {$extraAttributes}>
 {/if}
 
 {$hiddenFields}
