--- a/core/view/about-window.tmpl
+++ b/core/view/about-window.tmpl
@@ -1,4 +1,37 @@
 <div class="close"></div>
 <div class="logo"></div>
-
-<p>asfjalösk dfjaksdfj öaksdjf öaklsdjf aklsdjf kalsdjfklasdjfklasjdfklasjdföl kajsdfla</p>
+<p class="copyright">
+	&copy; 2006-{date('Y')} snowflake productions GmbH, Zurich<br />
+	Extensions are copyright of their respective owners. Please visit <a href="http://www.todoyu.com" target="_blank>todoyu.com</a> for details.
+	todoyu comes with absolutly no warranty. This is free software, and you are welcome to redistribute it <a href="http://www.todoyu.com/index.php?id=bsdlicense" target="_blank>under certain conditions</a>.<br />
+	Obstructing the appearance of this notice is prohibited by law.
+</p>
+<p class="version">
+	todoyu {constant(TODOYU_VERSION)}
+</p>
+<p class="community">
+	We thank the <a href="http://www.todoyu.com/index.php?id=contributors" target="_blank">community</a> for contributing to this project.
+</p>
+<p class="thanks">
+	Special thanks go to:
+</p>
+<div class="names">
+	<ul id="scrollingnames">
+		<li>Adrian Zimmermann</li>
+		<li>André Ledergerber</li>
+		<li>André Oechslin</li>
+		<li>Andri Steiner</li>
+		<li>Astrid Schenker</li>
+		<li>Cornel Boppart</li>
+		<li>Dominic Brander</li>
+		<li>Fabian Erni</li>
+		<li>Joel B. Orlow</li>
+		<li>Kay Stenschke</li>
+		<li>Mario Rossi</li>
+		<li>Markus Rohner</li>
+		<li>Pascal Fuchser</li>
+		<li>Nicolas Karrer</li>
+		<li>Thomas Imboden</li>
+		<li>Thomas Schläpfer</li>
+	</ul>
+</div>
