* Fixed locale handling in Todoyu class * Added recheck button * Added empty line at db select to make selection clearer

--- a/install/view/02_servercheck.tmpl
+++ b/install/view/02_servercheck.tmpl
@@ -54,5 +54,6 @@
 	<script type="text/javascript">
 		document.observe('dom:loaded', Todoyu.Installer.hideButton.bind(Todoyu.Installer));
 	</script>
+	{Button label="LLL:installer.servercheck.buttonRecheck" onclick="location.href=location.href"}
 	{/if}
 {/block}
