--- a/core/view/head.tmpl
+++ b/core/view/head.tmpl
@@ -1,7 +1,7 @@
 <div id="head">
 	<ul id="headlets">
 		{foreach $headlets headlet}
-			<li id="headlet-{$headlet.name}" class="headlet {$headlet.type}" title="{$headlet.label}">
+			<li id="headlet-{$headlet.name}" class="headlet {$headlet.type} {$headlet.class}" title="{$headlet.label}">
 				{$headlet.content}
 			</li>
 		{/foreach}
