* extended form renderer with new attribute: <extraOnDisplay> allowing additional javascripts to be executed on form display initialization * fixed minor bug in select form element validation: 'required'-validation now compares against empty instead of against 0 (allows also strings) * moved methods of general use from assets extension into appropriate core managers

--- a/core/view/form/Form.tmpl
+++ b/core/view/form/Form.tmpl
@@ -9,6 +9,7 @@
 	</form>
 
 	<script type="text/javascript">
+	{if $extraOnDisplay}{$extraOnDisplay}{/if}
 	Todoyu.Form.onFormDisplay('{$htmlId}');
 	</script>
 {/if}
