--- a/core/view/about-window.tmpl
+++ b/core/view/about-window.tmpl
@@ -2,8 +2,8 @@
 <div class="logo"></div>
 <p class="copyright">
 	&copy; 2006-{date('Y')} snowflake productions GmbH, Zurich<br />
-	Extensions are copyright of their respective owners. Please visit <a href="http://www.todoyu.com" target="_blank>todoyu.com</a> for details.
-	todoyu comes with absolutly no warranty. This is free software, and you are welcome to redistribute it <a href="http://www.todoyu.com/index.php?id=bsdlicense" target="_blank>under certain conditions</a>.<br />
+	Extensions are copyright of their respective owners. Please visit <a href="http://www.todoyu.com" target="_blank">todoyu.com</a> for details.
+	todoyu comes with absolutly no warranty. This is free software, and you are welcome to redistribute it <a href="http://www.todoyu.com/index.php?id=bsdlicense" target="_blank">under certain conditions</a>.<br />
 	Obstructing the appearance of this notice is prohibited by law.
 </p>
 <p class="version">
