* corrected spelling due to Q:\todoyu\Rewrite\Konzepte\wording_style_guide * corrected some typos

--- a/core/view/about-window.tmpl
+++ b/core/view/about-window.tmpl
@@ -3,7 +3,7 @@
 <p class="copyright">
 	&copy; 2006-{date('Y')} snowflake productions GmbH, Zurich<br />
 	Extensions are copyright of their respective owners. Please visit <a href="http://www.todoyu.com" target="_blank">todoyu.com</a> for details.
-	todoyu comes with absolutly no warranty. This is free software, and you are welcome to redistribute it <a href="http://www.todoyu.com/index.php?id=bsdlicense" target="_blank">under certain conditions</a>.<br />
+	todoyu comes with absolutely no warranty. This is free software, and you are welcome to redistribute it <a href="http://www.todoyu.com/index.php?id=bsdlicense" target="_blank">under certain conditions</a>.<br />
 	Obstructing the appearance of this notice is prohibited by law.
 </p>
 <p class="version">
@@ -33,5 +33,6 @@
 		<li>Nicolas Karrer</li>
 		<li>Thomas Imboden</li>
 		<li>Thomas Schläpfer</li>
+		<li>and last but not least the whole rest of the snowflake team</li>
 	</ul>
 </div>
