--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Todoyu Installer - {Label $title}</title>
+	<title>todoyu Installer - {Label $title}</title>
 
 	<link href="../core/assets/css/base.css" rel="stylesheet" type="text/css" />
 	<link href="../core/assets/css/layout.css" rel="stylesheet" type="text/css" />
