--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -30,8 +30,8 @@
 					</h1>
 					<img src="assets/img/banner.jpg">
 					<p class="slogan">
-					Alle Reden von Todoyu &ndash;<br />
-					Ich nutze es.
+					{Label installer.slogan.line1} &ndash;<br />
+					{Label installer.slogan.line2}
 					</p>
 					</div>
 				</div>
@@ -69,7 +69,7 @@
 				{* ------------------- Footer ----------------- *}
 				<div id="footer">
 					<p>
-						<strong>todoyu.</strong> Copyright &copy; 2006-{date_format constant(TODOYU_UPDATE) "%Y"} Snowflake Productions, Z&uuml;rich<br />
+						<strong>todoyu.</strong> Copyright &copy; 2006-{date_format constant(TODOYU_UPDATE) "%Y"} snowflake productions GmbH, Switzerland<br />
 						Extensions are copyright of their respective owners. Go to <a href="http://www.todoyu.com" target="_blank">todoyu.com</a> for details. todoyu comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under certain conditions.<br />
 						Obstructing the appearance of this notice is prohibited by law.<br />
 						Installed version: {constant(TODOYU_VERSION)} ({constant(TODOYU_UPDATE)})
