* Added logo upload * Added image manager * Bugfixes * pathAbsolute() fix for windows paths outside of the todoyu root

--- a/core/assets/css/toppanel.css
+++ b/core/assets/css/toppanel.css
@@ -12,7 +12,7 @@
 	left:0;
 	width:200px;
 	height:60px;
-	background:url(../../../config/img/company.png) no-repeat 5px 50%;
+	background:url(../../../config/img/logo.png) no-repeat 5px 50%;
 }
 
 #head {
