--- a/core/assets/css/headlet.css
+++ b/core/assets/css/headlet.css
@@ -8,6 +8,7 @@
 	-webkit-box-shadow:2px 2px 7px #999;
 	-moz-box-shadow:2px 2px 7px #999;
 	box-shadow:2px 2px 7px #999;
+	background-color: white;
 }
 
 #headlets li {
