--- a/core/view/form/FormElement.tmpl
+++ b/core/view/form/FormElement.tmpl
@@ -21,10 +21,10 @@
 			<span title="{Label $wizard.wizardConf.title}" class="wizardIcon {$wizard.wizardConf.htmlClass}" onclick="Todoyu.Form.openWizard('{$wizard.wizardConf.idRecord}', '{$htmlId}', '{$wizard.wizardConf.ext}', '{$wizard.wizardConf.controller}', '{$wizard.wizardConf.action}', '{$wizard.wizardConf.height}', '{$wizard.wizardConf.width}', '{Label $wizard.wizardConf.title true}');"></span>
 			<div class="clear"></div>
 		{/if}
-		
 		{if $error && $errorMessage}
-			<span class="errorMessage">{Label $errorMessage plain=true}</span>
+			<div class="errorMessage">{Label $errorMessage plain=true}</div>
 		{/if}
+		<div class="clear"><!-- --></div>
 	</div>
 	<div class="fClear"><!-- --></div>
 </div>
