--- a/core/assets/css/headlet-about.css
+++ b/core/assets/css/headlet-about.css
@@ -73,3 +73,9 @@
 	padding:5px;
 }
 
+#headlet-about-window .names ul li.coder {
+	font-weight:bold;
+	letter-spacing:2px;
+	text-transform:uppercase;
+}
+
