--- a/install/view/06_systemconfig.tmpl
+++ b/install/view/06_systemconfig.tmpl
@@ -5,7 +5,7 @@
 			<tr>
 				<td width="109"><label for="name">{Label installer.systemconfig.name} *</label></td>
 				<td width="379">
-					<input name="name" type="text" id="name" value="{$postData.name|default:'Todoyu'}" />
+					<input name="name" type="text" id="name" value="{$postData.name|default:'todoyu'}" />
 				</td>
 			</tr>
 			<tr>
