--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -5,7 +5,7 @@ form {
 	* html form {height:1%}
 
 	fieldset {
-		float:left; /* is a bugfix */
+		float:left; /* is a bugFix */
 		width:100%;
 		margin:0;
 		padding:0;
@@ -14,7 +14,7 @@ form {
 
 	* html fieldset {height:1%} /* IE6 */
 
-			/* buttons, footerline */
+			/* Buttons, Footer line */
 		fieldset.buttons {
 			margin:10px 0 5px 0;
 			padding:0.2em 0;
@@ -134,6 +134,11 @@ label {}
 
 	label span.required {}
 
+[disabled] {
+	background-color:#ddd;
+	color:#444;
+}
+
 /* -----------------
 	HTML building
    -----------------*/
@@ -246,7 +251,7 @@ div.fElement {
 
 	.typeDatabaseRelation {}
 
-		.typeDatabaseRelation .foreignRecordsActionControll {
+		.typeDatabaseRelation .foreignRecordsActionControl {
 			display:block;
 		}
 
@@ -301,7 +306,7 @@ input, textarea, select {
 fieldset {}
 
 	fieldset div.odd {
-		/*background-color:#ffffff;*/
+		/*background-color:#fff;*/
 	}
 
 	fieldset div.even {}
@@ -351,8 +356,8 @@ form .textAfterField  {
 	display:block;
 	padding:10px;
 	margin:1px 2px 0 0;
-	border:1px solid #CCC;
-	background-color:#EFEFEF;
+	border:1px solid #ccc;
+	background-color:#efefef;
 	font-size:10px;
 	color:#666;
 	text-align:left;
@@ -407,14 +412,14 @@ form .typeCheckbox div.errorMessage {
 */
 
 /* -------------------------
-	Autocompleter list
+	Auto-completer list
    ------------------------- */
 .acResultContainer	{
 		z-index:100;
 	}
 
 	.acResultContainer li{
-		background:#F0F0EE;
+		background:#f0f0ee;
 		border:0 solid #ccc;
 		border-width:0 1px 1px 1px;
 		padding:2px 0 2px 3px;
@@ -436,7 +441,7 @@ form .typeCheckbox div.errorMessage {
 
 
 /* ----------------------------------
-	Formelement:databaseRelation
+	Form element: databaseRelation
    ---------------------------------- */
 .formElement .databaseRelation {
 	margin-top:5px;
@@ -457,14 +462,14 @@ form .typeCheckbox div.errorMessage {
 
 
 /* ----------------------------------------------
-	Formelement:foreignRecordsActionControll
+	Form element: foreignRecordsActionControl
    ---------------------------------------------- */
-.formElement .foreignRecordsActionControll {
+.formElement .foreignRecordsActionControl {
 	height:30px;
 	background-color:#a8c7de
 }
 
-.formElement .foreignRecordsActionControll a {
+.formElement .foreignRecordsActionControl a {
 	background:transparent url(../img/formelements.png) no-repeat 0 -30px;
 	height:16px;
 	width:17px;
@@ -475,7 +480,7 @@ form .typeCheckbox div.errorMessage {
 
 
 
-/* wizad icon */
+/* Wizard icon */
 .fField span.wizardIcon  {
 	height:16px;
 	width:16px;
@@ -485,9 +490,10 @@ form .typeCheckbox div.errorMessage {
 }
 
 
-/* ----------------------------------------------
-	Formelement:iconSelector
-   ---------------------------------------------- */
+/* ---------------------------------
+	Form element: iconSelector
+   --------------------------------- */
+
 .fField .iconSelector {
 	width: auto;
 }
@@ -517,7 +523,9 @@ form .typeCheckbox div.errorMessage {
 
 
 
-/* styles for lighbox creates */
+/* ----------------------------------
+	Quick creation light-box
+   ---------------------------------- */
 
 #quickcreate form,
 #quicktask form,
@@ -556,19 +564,22 @@ form .typeCheckbox div.errorMessage {
 	min-height:170px;
 }
 
-/* special styles for involved persons */
 
+
+/* ---------------------------------------
+	Special styles for involved persons
+   --------------------------------------- */
 form .databaseRelation {
 	margin-top:5px;
 	padding-top:5px;
 }
 
-form .fieldnamePersons .foreignRecordsActionControll,
-form .fieldnameContactinfo .foreignRecordsActionControll,
-form .fieldnameAddress .foreignRecordsActionControll,
-form .fieldnameCompany .foreignRecordsActionControll,
-form .fieldnameRole .foreignRecordsActionControll,
-form .fieldnamePerson .foreignRecordsActionControll {
+form .fieldnamePersons .foreignRecordsActionControl,
+form .fieldnameContactinfo .foreignRecordsActionControl,
+form .fieldnameAddress .foreignRecordsActionControl,
+form .fieldnameCompany .foreignRecordsActionControl,
+form .fieldnameRole .foreignRecordsActionControl,
+form .fieldnamePerson .foreignRecordsActionControl {
 	text-align:left;
 }
 
