--- a/core/assets/css/button.css
+++ b/core/assets/css/button.css
@@ -76,6 +76,10 @@ button.expandAll .icon {
 	width:25px;
 }
 
+button.saveanddownload .icon {
+	background:url(../img/icons.png) no-repeat 0 -838px;
+}
+
 
 /* ---------------------------
 	Center save buttons
