* added icon classes for checked / unchecked options * added dwoo plugin for project role label

--- a/core/assets/css/content.css
+++ b/core/assets/css/content.css
@@ -182,6 +182,14 @@ span.infoIcon {
 	background:url('../img/icons.png') no-repeat 0 -629px !important;
 }
 
+span.checkboxCheckedIcon {
+	background:url('../img/icons.png') no-repeat 0 -870px !important;
+}
+
+span.checkboxOpenIcon {
+	background:url('../img/icons.png') no-repeat 0 -900px !important;
+}
+
 .calendaricon {
 	background:url('../img/icons.png') no-repeat 0 -690px;
 	cursor:pointer;
