--- a/core/view/noaccess.tmpl
+++ b/core/view/noaccess.tmpl
@@ -66,7 +66,7 @@
 						<table width="500" border="0" cellspacing="0" cellpadding="5">
 							<tr>
 								<td width="120"><strong>{Label core.noAccess.requestURL}:</strong></td>
-								<td width="360">{htmlentities $requestURL}</td>
+								<td width="360">{htmlencode $requestURL}</td>
 							</tr>
 							<tr>
 								<td><strong>{Label core.noAccess.missingRight}:</strong></td>
