--- a/core/assets/css/notification.css
+++ b/core/assets/css/notification.css
@@ -18,6 +18,7 @@
 	border-bottom:1px solid #8c9080;
 	background-color:#fff;
 	opacity:0.94;
+	filter: alpha(opacity = 94);
 }
 
 #notifications div.note td.icon {
