--- a/core/view/form/FormElement_Comment.tmpl
+++ b/core/view/form/FormElement_Comment.tmpl
@@ -1,5 +1,5 @@
 {extends "core/view/form/FormElement.tmpl"}
 
 {block name="field"}
-	{$valueTemplate}
+	<span class="commenttext">{$valueTemplate}</span>	
 {/block}
