--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -60,7 +60,7 @@
 							{* ----------- Submit: goto next step -------- *}
 
 							{if $stop != true && $button != false }
-								{Button label=$button type="submit" id="next"}
+								{Button label=$button type="submit" id="next" class=$buttonClass}
 							{/if}
 						</form>
 						<br />
