--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -274,17 +274,24 @@ div.fElement {
 		.typeDatabaseRelation .databaseRelation {
 			border-top:1px solid #ccc;
 		}
+
 		.typeDatabaseRelation .databaseRelation span.label {
 			float:left;
 			cursor:pointer;
 		}
+
 		.typeDatabaseRelation .databaseRelation span.additionalStuff {
 			float:right;
 		}
+
 		.typeDatabaseRelation .databaseRelation span.additionalStuff a.remove {
 			background:url(../img/icons.png) no-repeat 0 -539px;
 		}
 
+	button.updateDatabase .icon {
+		width:20px;
+		background:url(../img/icons.png) no-repeat 2px -928px;
+	}
 
 	.fElement .fField.hasWizard input{
 		width:80%;
