* added Martin to disclaimer

--- a/core/view/about-window.tmpl
+++ b/core/view/about-window.tmpl
@@ -28,6 +28,7 @@
 		<li>Joel B. Orlow</li>
 		<li>Kay Stenschke</li>
 		<li>Mario Rossi</li>
+		<li>Martin Wiederkehr</li>
 		<li>Markus Rohner</li>
 		<li>Pascal Fuchser</li>
 		<li>Nicolas Karrer</li>
