* extended todoyu installer to allow for manual specification of database to used in case of providers denying rights to list available databases.

--- a/install/assets/css/installer.css
+++ b/install/assets/css/installer.css
@@ -152,7 +152,8 @@ select#language,
 select#locale,
 select#timezone,
 select#database,
-input#database_new {
+input#database_new,
+input#database_manual {
 	width:250px;
 }
 
