* improved daytracks history sheet to not list months without time tracks * simplified daytracks history sheet css (used styling standards) * minor cleanup of daytracks JS * replaced large blue ajax spinner image agains grey one

--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -453,8 +453,8 @@ form .typeCheckbox div.errorMessage {
 	.acResultContainer .empty{
 		background:none;
 		border:none;
-		border-width:0 0 0 0;
-		padding:0 0 0 0;
+		border-width:0;
+		padding:0;
 	}
 
 
